Revert: launches grid's column aligning fixes

--- a/src/main/resources/public/scss/common/rp-table-common.scss
+++ b/src/main/resources/public/scss/common/rp-table-common.scss
@@ -48,8 +48,8 @@
   }
   .grid-cell {
     float: left;
-    //padding-right: 10px;
-    padding-left: 43px;
+    padding-right: 10px;
+    padding-left: 15px;
     min-height: 1px;
   }
 }
