--- a/src/main/resources/public/scss/launchPage/step-grid.scss
+++ b/src/main/resources/public/scss/launchPage/step-grid.scss
@@ -27,11 +27,11 @@ $step-type-cell-width: (100 - $step-name-cell-width - $step-time-cell-width*2 - 
 .step-grid {
   .grid-cell {
     &.name-grid-cell {
-      padding-left: 35px;
+      padding-left: 10px;
       width: $step-name-cell-width;
       &.rp-grid-th {
         .text-overflow {
-          //padding-left: 25px;
+          padding-left: 25px;
         }
       }
     }
